--- a/index.html
+++ b/index.html
@@ -77,7 +77,38 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
+        <section class="container  my-5">
+            <h2 class="text-center mb-5 ">javascript Questions And Answers</h2>
+            <div class="row">
+              <div class="col-lg-6 mt-4 order-sm-1">
+               <div class="accordion accordion-flush" id="accordionFlushExample">
+                 <div class="accordion-item">
+                   <h2 class="accordion-header" id="flush-headingOne">
+                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                       How does javascript work? 
+                     </button>
+                   </h2>
+                   <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                     <div class="accordion-body">জাভাস্ক্রিপ্ট হল একটি ক্লাইন্ট সাইড স্ক্রিপ্টিং ল্যাংগুয়েজ বা ব্রাউজার স্ক্রিপ্টিং। ক্লাইন্ট সাইড স্ক্রিপ্টিং ল্যাংগুয়েজ এর অর্থ হচ্ছে ব্রাউজার এই স্ক্রিপ্টগুলোকে রান করবে। ক্লাইন্ট সাইড এর বিপরীত হল সার্ভার সাইড, সার্ভার সাইড ল্যাংগুয়েজ গুলোর কোড ওয়েব সার্ভার এর মাধ্যমে রান হয়।জাভাস্ক্রিপ্ট মুলত ৩টি জিনিস নিয়ে তৈরী ১. ECMAScript এটা হচ্ছে জাভাস্ক্রিপ্টের মুল অংশ বা core functionality ২. DOM  এটা ওয়েব পেজের কনটেন্টের সাথে কাজ করে  ৩. BOM এটা ব্রাউজারের সাথে কাজ করে।</div>
+                   </div>
+                 </div>
+                 <div class="accordion-item">
+                   <h2 class="accordion-header" id="flush-headingThree">
+                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                       What is the difference between localstorage and sessionstorage?
+                     </button>
+                   </h2>
+                   <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                     <div class="accordion-body">লোকাল স্টোরেজের সাইজ ১০ এমবি অনেকে ৫ এমবি ও বলে থাকে। আর সেশন স্টোরেজের সাইজ ৫ এমবি
+                        । লোকাল স্টোরেজের ডাটা নিজ হাতে ডিলিট করতে হয়।আর সেশন স্টোরেজের ডাটা ব্রাউজার অথবা ট্যাব বন্ধ করলে স্টোরেজ ক্লিয়ার হয়ে যায়।লোকাল স্টোরেজ কোন নির্দিষ্ট ট্যাবের জন্য কাজ না করে যেকোন ট্যাবের জন্য কাজ করে। আর সেশন স্টোরেজ কোন নির্দিষ্ট ট্যাবের জন্য কাজ করে আর ট্যাব বন্ধ করলে ডাটা মুছে যায়।</div>
+                   </div>
+                 </div>
+               </div>
+              </div>
+            </div>
+           </section>
         <footer></footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         <!-- add javascript  file  -->
         <script src="./js/app.js"></script>
