--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
-        <section class="container  my-5">
+        <section id="question-ans" class="container  my-5">
             <h2 class="text-center mb-5 ">javascript Questions And Answers</h2>
             <div class="row">
               <div class="col-lg-6 mt-4 order-sm-1">
